# Etap2

./: CMakeLists.txt  Doxyfile  Etap1.pro  Etap2.pro  MainWindow.cpp  MainWindow.h  Makefile  README.md  SensorDataLogger.cpp  SensorDataLogger.h  SensorReader.cpp  SensorReader.h  SensorReaderApp  a.out  cmake_install.cmake  dane_czujnikow.csv  main.cpp  moc_MainWindow.cpp  qrc_resources.cpp  resources.qrc  wds_en.qm  wds_en.ts  wds_pl.ts
arduino/: arduino.ino
doc/html/: MainWindow_8cpp.html  MainWindow_8cpp__incl.map  MainWindow_8cpp__incl.md5  MainWindow_8h.html  MainWindow_8h__dep__incl.map  MainWindow_8h__dep__incl.md5  MainWindow_8h__incl.map  MainWindow_8h__incl.md5  MainWindow_8h_source.html  README_8md.html  SensorDataLogger_8cpp.html  SensorDataLogger_8cpp__incl.map  SensorDataLogger_8cpp__incl.md5  SensorDataLogger_8h.html  SensorDataLogger_8h__dep__incl.map  SensorDataLogger_8h__dep__incl.md5  SensorDataLogger_8h__incl.map  SensorDataLogger_8h__incl.md5  SensorDataLogger_8h_source.html  SensorReader_8cpp.html  SensorReader_8cpp__incl.map  SensorReader_8cpp__incl.md5  SensorReader_8h.html  SensorReader_8h__dep__incl.map  SensorReader_8h__dep__incl.md5  SensorReader_8h__incl.map  SensorReader_8h__incl.md5  SensorReader_8h_source.html  annotated.html  classMainWindow.html  classMainWindow__coll__graph.map  classMainWindow__coll__graph.md5  classMainWindow__inherit__graph.map  classMainWindow__inherit__graph.md5  classSensorDataLogger.html  classSensorReader.html  (+54 more)
html/: md_README.html  menudata.js  pages.html
latex/: main_8cpp.tex  md_README.tex  refman.tex
(+111 files in other folders)
